# unix-ipc-lab

./: .gitignore  CMakeLists.txt  LICENSE
named-pipes/: client.cpp  server.cpp
src/: channel.cpp  channel.hpp  message.cpp  message.hpp
src/head-on/: client.cpp  server.cpp
src/interact/: client.cpp  server.cpp
src/simple/: client.cpp  server.cpp
